<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light_gray"
    tools:context=".RingActivity">

    <ImageView
        android:id="@+id/imgRing"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginHorizontal="10dp"
        android:src="@drawable/morning" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#79FFFFFF" />

    <TextView
        android:id="@+id/memeRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgRing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/meme"
        android:textColor="#86181F65"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/timeRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/memeRing"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/labelRing"
        android:layout_below="@+id/timeRing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:textSize="30sp"
        android:textColor="@color/black"
        android:textStyle="italic"
        tools:ignore="PrivateResource" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatBtnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:src="@drawable/ic_close_32"
        android:backgroundTint="@color/navy"
        android:contentDescription="TODO" />

</RelativeLayout>